# military-vehicles-yolo-mnv2

./: .gitignore  README.md  pyproject.toml
data/: README.dataset.txt  README.roboflow.txt  classes.txt  dataset.yml
data/test/: _annotations.coco.json
data/train/: _annotations.coco.json
data/valid/: _annotations.coco.json
src/: coco_to_crops.py  coco_to_yolo.py  verify_data.py
training/: train_mobile_net_v2.py  train_yolo.py
