[project]
name = "military-vehicles-computer-vision"
version = "0.1.0"
description = "Computer Vision pipeline for military vehicle detection (YOLO) and classification (MobileNet)."
requires-python = ">=3.13"

dependencies = [
    "colorama>=0.4.6",
    "pillow>=11.0.0",
    "tqdm>=4.68.1",
    "ultralytics>=8.3.0",
    "tensorflow>=2.16.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "opencv-python>=4.10.0",
    "torch>=2.2.0+cu121",
    "torchvision>=0.17.0+cu121",
]

[tool.uv]
dev-dependencies = [
    "wandb>=0.16.0",
]